--- a/TOTP/TOTP.csproj
+++ b/TOTP/TOTP.csproj
@@ -15,6 +15,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageIcon></PackageIcon>
     <Description>Simple windows app to generate time based one time passwords, like Google Authenticator</Description>
+    <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -27,7 +28,8 @@
 
   <ItemGroup>
     <PackageReference Include="BasicOTP" Version="21.4.22.278" />
-    <PackageReference Include="suag" Version="21.4.25.1421" />
+    <PackageReference Include="suag" Version="21.4.25.1432" />
+    <PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
